// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormDisplayer component tests Snapshot test with default props - HTML renderer 1`] = `
<ForwardRef
  content={
    Object {
      "configuration": Object {
        "resources": Object {
          "scripts": Object {
            "bootstrap.min.js": "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js",
            "jquery.js": "https://code.jquery.com/jquery-3.2.1.slim.min.js",
            "popper.js": "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js",
          },
          "styles": Object {
            "bootstrap.min.css": "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css",
          },
        },
        "schema": "json schema",
      },
      "formInfo": Object {
        "lastModified": 2021-08-23T13:26:02.130Z,
        "name": "html_hiring_HRInterview",
        "type": "HTML",
      },
      "source": "html source code",
    }
  }
  context={Object {}}
  data={Object {}}
  isEnvelopeConnectedToChannel={true}
  onOpenForm={[MockFunction]}
>
  <div
    data-ouia-component-type="form-displayer"
    data-ouia-safe={true}
  >
    <div
      id="inner-form-container"
    >
      <HtmlFormRenderer
        resources={
          Object {
            "scripts": Object {
              "bootstrap.min.js": "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js",
              "jquery.js": "https://code.jquery.com/jquery-3.2.1.slim.min.js",
              "popper.js": "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js",
            },
            "styles": Object {
              "bootstrap.min.css": "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css",
            },
          }
        }
        source="html source code"
      />
    </div>
  </div>
</ForwardRef>
`;

exports[`FormDisplayer component tests Snapshot test with default props - TSX renderer 1`] = `
<ForwardRef
  content={
    Object {
      "configuration": Object {
        "resources": Object {
          "scripts": Object {},
          "styles": Object {},
        },
        "schema": "json schema",
      },
      "formInfo": Object {
        "lastModified": 2021-08-23T13:26:02.130Z,
        "name": "react_hiring_HRInterview",
        "type": "TSX",
      },
      "source": "react source code",
    }
  }
  context={Object {}}
  data={Object {}}
  isEnvelopeConnectedToChannel={true}
  onOpenForm={[MockFunction]}
>
  <div
    data-ouia-component-type="form-displayer"
    data-ouia-safe={true}
  >
    <div
      id="inner-form-container"
    >
      <ReactFormRenderer
        resources={
          Object {
            "scripts": Object {},
            "styles": Object {},
          }
        }
        setIsExecuting={[Function]}
        source="react source code"
      />
    </div>
  </div>
</ForwardRef>
`;

exports[`FormDisplayer component tests Test beats spinner 1`] = `
<ForwardRef
  content={Object {}}
  context={Object {}}
  data={Object {}}
  isEnvelopeConnectedToChannel={false}
  onOpenForm={[MockFunction]}
>
  <div
    data-ouia-component-type="form-displayer"
    data-ouia-safe={true}
  >
    <Bullseye
      className="kogito-form-displayer__ball-beats"
    >
      <div
        className="pf-l-bullseye kogito-form-displayer__ball-beats"
      >
        <BallBeat
          color="#000000"
          loading={true}
        >
          <EmotionCssPropInternal
            __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
            __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
            css={
              Object {
                " > div": Object {
                  "&:nth-of-type(2n-1)": Object {
                    "animationDelay": "-0.35s !important",
                  },
                  "animation": "_EMO_animation-o8qkpw_@keyframes animation-o8qkpw{100%{opacity:1;transform:scale(1);}50%{opacity:0.2;transform:scale(0.75);}}_EMO_ 0.7s 0s infinite linear",
                  "animationFillMode": "both",
                  "backgroundColor": "#000000",
                  "borderRadius": "100%",
                  "display": "inline-block",
                  "height": "15px",
                  "margin": "2px",
                  "width": "15px",
                },
              }
            }
          >
            <Noop />
            <div
              className="css-1rg7usp-Component"
            >
              <div />
              <div />
              <div />
            </div>
          </EmotionCssPropInternal>
        </BallBeat>
      </div>
    </Bullseye>
  </div>
</ForwardRef>
`;
